fixed double header bug

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ description: "Personal Website."
 favicon: "images/sisyphus.svg"
 ---
 
-# {-}
+# Apurva Nakade 
 
 <img src="images/me0.jpg" width="200px" class="left" />
 
