--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,8 @@
 title: "Apurva Nakade"
 author: "email: <span onMouseOver=\"this.innerHTML='alastname@uwo.ca'\"
                 onMouseOut=\"this.innerHTML='(left as an exercise to the reader)'\">(left as an exercise to the
-                reader)</span> <br /> [CV], [Research Statement] "
+                reader)</span> <br /> 
+                Academic Info: [CV], [Research Statement (pdf)], [Research Statement (video)], [Teaching Statement], [Teaching Dossier] "
 output: bookdown::gitbook
 github-repo: apurvanakade/apurvanakade.github.io
 description: "Personal Website."
@@ -14,19 +15,22 @@ favicon: "images/sisyphus.svg"
 <img src="images/me0.jpg" width="200px" class="left" />
 
 I\'m a postdoc at the [University of Western Ontario] working with [Dan Christensen] and [Chris Kapulkin]. 
-I do research in algebraic topology and homotopy theory.
+I am doing research in algebraic topology and homotopy theory.
 
 In addition to research, I am very passionate about improving math education. I want to
 modernize math-ed and bring it to the 21st century through the use of new technological innovations 
 in teaching and in the process make it more accessible and equitable.
 
-Things that keep me busy these days: teaching [Math 2151A (Discrete Math for Engineers)], making [video lectures], organizing the [DRP].
+Things that keep me busy these days: teaching [Math 2151A (Discrete Math for Engineers)], making [video lectures], organizing the [DRP], organizing the topology boot-camp, applying for jobs.
 
   [University of Western Ontario]: http://www.math.uwo.ca/ 
   [Dan Christensen]: https://jdc.math.uwo.ca/ 
   [Chris Kapulkin]: http://www.math.uwo.ca/faculty/kapulkin/
-  [CV]: https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing
-  [Research Statement]: https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing
+  [CV]: https://drive.google.com/file/d/10uLHSlp8ZBvHBC6zXaLsxmSuYq-M59xL/view?usp=sharing
+  [Research Statement (pdf)]: https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing
+  [Research Statement (video)]: https://youtu.be/rlyzT1PWw5I
   [Math 2151A (Discrete Math for Engineers)]: https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873
   [DRP]: https://www.math.uwo.ca/undergraduate/directed_reading_program.html 
   [video lectures]: https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN
+  [Teaching Statement]: https://drive.google.com/file/d/1ePTk8yzz96OEb7kpJUzF9Du4cc1bK5zE/view?usp=sharing
+  [Teaching Dossier]: https://drive.google.com/file/d/1v_ij1QMzXKLxECifXnMILIJlW3DQBNSY/view?usp=sharing
