--- a/05TeachingEffectiveness.Rmd
+++ b/05TeachingEffectiveness.Rmd
@@ -28,6 +28,8 @@ which includes student comments, can be found here:
 
 ## Student Comments
 
+This section contains selected comments left by students on instructor evaluation forms.
+
 **Discrete Structures for Engineering, UWO 2020**
 
 -   The instructor for this course has done a very good job, easy
